# openblocks

./: .clangd  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  LICENSE.retro  README.md  deps.txt  justfile  run.sh  vcpkg-configuration.json  vcpkg.json
.zed/: debug.json
asset-srcs/models/: NOTE.txt
assets/icons/editor/: index.theme
assets/icons/editor-dark/: index.theme
assets/icons/editor/actions/48/: NOTE.txt
assets/shaders/: font.fs  generic2d.fs  generic2d.vs  ghost.fs  ghost.vs  handle.fs  handle.vs  identity.fs  identity.vs  orange.fs  orange.vs  outline.fs  outline.vs  phong.fs  phong.vs  skybox.fs  skybox.vs  wireframe.fs  wireframe.vs
assets/shaders/debug/: debugfont.vs
assets/textures/: NOTE.txt  studs.psd  studs.xcf
assets/textures/skybox/: copyright.txt
autogen/: CMakeLists.txt
autogen/src/: analysis.cpp  analysis.h  cache.cpp  cache.h  codegen.cpp  codegen.h  main.cpp  util.cpp  util.h
autogen/src/data/: analysis.cpp  analysis.h  codegen.cpp  codegen.h
autogen/src/enum/: analysis.cpp  analysis.h  codegen.cpp  codegen.h
autogen/src/object/: analysis.cpp  analysis.h  codegen.cpp  codegen.h
client/: CMakeLists.txt  deps.cmake
client/src/: main.cpp
cmake/: CPM.cmake  FindClang.cmake  FindQScintilla.cmake  FindQScintilla6.cmake  FindStb.cmake  gitversion.cmake
core/: CMakeLists.txt  deps.cmake
core/src/: camera.cpp  camera.h  camera.old.cpp  camera.old.h  common.cpp  common.h  handles.cpp  handles.h  logger.cpp  logger.h  lua.h  luaapis.h  math_helper.cpp  math_helper.h  meta.cpp  panic.cpp  panic.h  partassembly.cpp  partassembly.h  platform.cpp  platform.h  ptr_helpers.h  timeutil.cpp  timeutil.h  utils.h  version.cpp.in  version.h
core/src/datatypes/: annotation.h  base.cpp  base.h  cframe.cpp  cframe.h  color3.cpp  color3.h  enum.cpp  enum.h  enummeta.h  meta.cpp  meta.h  primitives.cpp  primitives.h  ref.cpp  ref.h  signal.cpp  signal.h  variant.cpp  variant.h  vector.cpp  vector.h
core/src/enum/: annotation.h  meta.cpp  meta.h  part.h  surface.cpp  surface.h
core/src/error/: data.h  error.cpp  error.h  fallible.h  instance.h  result.cpp  result.h
core/src/lua/: enum.cpp  globals.h  instancelib.cpp
core/src/objectmodel/: datatypes.h  macro.h  method.h  property.h  signal.h  type.h
core/src/objects/: annotation.h  base.h  camera.cpp  camera.h  datamodel.cpp  datamodel.h  folder.cpp  folder.h  handles.cpp  handles.h  hint.cpp  hint.h  jointsservice.cpp  jointsservice.h  message.cpp  message.h  meta.cpp  model.cpp  model.h  part.cpp  part.h  player.cpp  player.h  pvinstance.cpp  pvinstance.h  script.cpp  script.h  snap.cpp  snap.h  workspace.cpp  workspace.h
core/src/objects/base/: instance.cpp  instance.h  instancehelpers.h  member.h  refstate.h  service.cpp  service.h
core/src/objects/joint/: jointinstance.cpp  jointinstance.h  motor6d.cpp  motor6d.h  rotate.cpp  rotate.h  rotatev.cpp  rotatev.h  snap.cpp  snap.h  weld.cpp  weld.h
core/src/objects/part/: basepart.cpp  basepart.h  clickdetector.cpp  clickdetector.h  part.cpp  part.h  wedgepart.cpp  wedgepart.h
core/src/objects/script/: scriptcontext.cpp  scriptcontext.h  serverscriptservice.cpp  serverscriptservice.h
core/src/objects/service/: cameracontroller.cpp  cameracontroller.h  jointsservice.cpp  jointsservice.h  players.cpp  players.h  selection.cpp  selection.h  workspace.cpp  workspace.h
core/src/objects/service/script/: scriptcontext.cpp  scriptcontext.h  serverscriptservice.cpp  serverscriptservice.h
core/src/physics/: body.cpp  body.h  convert.h  simulation.cpp  simulation.h  util.h  world.cpp  world.h
core/src/rendering/: assets.cpp  assets.h  defaultmeshes.cpp  defaultmeshes.h  font.cpp  font.h  frustum.cpp  frustum.h  mesh.cpp  mesh.h  mesh2d.cpp  mesh2d.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skybox.cpp  skybox.h  surface.cpp  surface.h  texture.cpp  texture3d.cpp  texture3d.h  torus.cpp  torus.h
core/src/rendering/debug/: debugrenderer.cpp
docs/: autogen.md  qscintilla.md
docs/build-instructions/: arch-mingw64.md
editor/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  deps.cmake  editor.qrc  editorcommon.h  explorermodel.cpp  explorermodel.h  license.cpp  license.h  license.ui  licensetxt.cpp  main.cpp  mainglwidget.cpp  mainglwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  placedocument.cpp  placedocument.h  qt.conf  undohistory.cpp  undohistory.h
editor/panes/: explorermodel.cpp  explorermodel.h  explorerview.cpp  explorerview.h  outputtextview.cpp  outputtextview.h  propertiesmodel.cpp  propertiesmodel.h  propertiesview.cpp  propertiesview.h
editor/script/: commandedit.cpp  commandedit.h  scriptdocument.cpp  scriptdocument.h
patches/: freetype_cmakever.patch  jolt_farproc.patch
src/: camera.cpp  camera.h  common.cpp  common.h  datatype.h  defaultmeshes.cpp  defaultmeshes.h  main.cpp  part.cpp  part.h  renderer.cpp  shader.cpp  shader.h
src/datatypes/: base.cpp  base.h  cframe.cpp  cframe.h  color3.h  meta.cpp  meta.h  primitives.cpp  primitives.h  vector.cpp  vector.h
src/objects/: base.h  datamodel.cpp  datamodel.h  meta.h  part.cpp  part.h  workspace.cpp  workspace.h
src/objects/base/: instance.cpp  instance.h  member.h  metadata.h  service.cpp  service.h
src/physics/: simulation.cpp  simulation.h  util.h
src/rendering/: defaultmeshes.cpp  light.h  material.h  part.h  renderer.cpp  renderer.h  skybox.cpp  skybox.h  texture.cpp  texture.h  texture3d.cpp
tests/: CMakeLists.txt  deps.cmake
tests/src/: common.cpp  luaschedtest.cpp  luasignaltest.cpp  luatest.cpp  testcommon.h  testutil.h  testutillua.h
tests/src/lua/: luaenum.cpp  luageneric.cpp  luainst.cpp  luamethod.cpp  luasched.cpp  luasignal.cpp
tests/src/objectmodel/: basic.cpp  datamodel.cpp  hierarchyutils.cpp
tests/src/objectmodelv2/: categories.cpp  inheritance.cpp  members.cpp  typemeta.cpp
toolchain/: mingw64.cmake
tools/: genmesh.py  incltree.sh
vcpkg-overlays/reactphysics3d/: portfile.cmake  std_chrono.patch  vcpkg.json
